[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Egor Efimov <odes36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-admin = "^2.0.2"
Django = "^4.2.6"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
